feat: temp parser api (#86)
* feat: added temp parser api

* docs(openapi): update parser endpoint and add server

* fix: typo
