# backend/openapi.yml
@@ -4,7 +4,10 @@ info:
   description: DaTeam SDC service provides an interface to SDC Forms and their Responses
   version: 1.0.0
 servers:
-  - url: http://localhost:3000/api
+  - url: http://localhost:3001/api/v1
+    description: Local Dev
+  - url: https://dateam-frontend.herokuapp.com/api/v1
+    description: Production
 tags:
   - name: patient
     description: Access to patient information
@@ -88,7 +91,7 @@ paths:
         404:
           $ref: "#/components/responses/NotFound"
 
-  /parser:
+  /form/parse:
     post:
       tags:
         - parser
